--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Aprenda HTML5, CSS3 e SEO de forma simples, prática e objetiva desenvolvendo passo a passo do zero até a hospedagem um site one page moderno e responsivo."> 
     <title>HTML5 e CSS3 - One page site</title>
     <link rel="icon" href="img/favicon.png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
